Fixed spacing between header and body

--- a/mib/css/mainstyle.css
+++ b/mib/css/mainstyle.css
@@ -309,7 +309,7 @@ cite{
 .header-container {
   background-color: #F4F9FC;
   color: #183C68;
-  margin-bottom: 55px;
+  margin-bottom: 25px;
 }
 
 .embed-responsive {
